# rail

./: .gitignore  ARTIFACT.md  CITATION.cff  README.md  RUN.md  SEED_MANIFEST.json  pyproject.toml  requirements.txt  run_all_results.bat
.github/workflows/: ci.yml
app/: app.html  config.json  data.csv  server.html
experiments/: __init__.py  activity_report.py  baselines.py  baselines_integrated.py  diagnose_backend.py  experiments.py  experiments_ae.py  fast_classifier.py  honest_rail_one_run.py  make_journal_figures.py  make_main_figures.py  metrics.py  publication_artifacts.py  rail_core.py  rail_one_run.py  rail_operator.py  rail_paper.py  rail_stats.py  rail_stats_extra.py  regime_sweep.py  replay_integrated.py  reproduce_paper.py  run_publication.py  sensitivity.py  statistics.py  theory.py  theory_risk.py
schemas/: rail.activity_report.v1.schema.json  rail.non_ok_export.v4.schema.json  rail.recalibration.v4.schema.json
tests/: test_activity_report.py  test_baselines.py  test_baselines_integrated.py  test_improvements.py  test_journal_figures.py  test_publication_artifacts.py  test_rail_core.py  test_rail_core_extensions.py  test_rail_operator.py  test_rail_stats_extra.py  test_regime_sweep.py  test_sensitivity_and_metrics.py  test_statistics.py  test_theory.py  test_theory_risk.py
