[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rail-hitl"
version = "0.1.0"
description = "Reliability-Aware Ingress Layer for human feedback in stream analytics."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Jorge Martinez-Gil" }
]
keywords = [
  "human-in-the-loop",
  "stream analytics",
  "online learning",
  "data quality",
  "knowledge engineering"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.optional-dependencies]
experiments = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "river>=0.21",
  "matplotlib>=3.7",
  "datasets>=2.18"
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]

[project.scripts]
rail-publication = "experiments.run_publication:main"
rail-activity-report = "experiments.activity_report:main"

[tool.setuptools]
packages = ["experiments"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --basetemp=.pytest-tmp"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  "experiments/experiments.py",
  "experiments/experiments_ae.py",
  "experiments/rail_paper.py",
  "experiments/rail_one_run.py",
  "experiments/activity_report.py",
  "experiments/publication_artifacts.py",
  "experiments/run_publication.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
  "E501",
  "B008",
  "UP007",
  "SIM108",
]

[tool.ruff.format]
quote-style = "double"
