[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rail-hitl"
version = "0.1.0"
description = "Reliability-Aware Ingress Layer for human feedback in stream analytics."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Jorge Martinez-Gil" },
  { name = "Isaac Lera" }
]
keywords = [
  "human-in-the-loop",
  "stream analytics",
  "admission control",
  "noisy labels",
  "online learning",
  "concept drift"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.optional-dependencies]
experiments = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7"
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]

[project.scripts]
rail-reproduce = "experiments.reproduce_paper:main"
rail-activity-report = "experiments.activity_report:main"

[tool.setuptools]
packages = ["experiments"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --basetemp=.pytest-tmp"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  "experiments/rail_paper.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
  "E501",
  "B008",
  "UP007",
  "SIM108",
]

[tool.ruff.format]
quote-style = "double"
